--- a/Json create 2/css/tab-bar.css
+++ b/Json create 2/css/tab-bar.css
@@ -75,10 +75,9 @@
 .tab-btn {
     font-size: 32px;
     color: var(--white-color);
+    background-color: var(--main-color);
     transition: all 0.5s ease;
-    border-radius: 12px;
-    padding: 4px;
-    width: 90px ;
+    width: var(--tabbar-width) ;
     height: 55px ;
 
     align-self: center;
@@ -86,27 +85,83 @@
     justify-content: center;
     align-items: center;
 
-    margin-top: 8px;
-    margin-bottom: 8px;
+    padding-top: 8px;
+    padding-bottom: 8px;
 }
 
-.tab-btn:hover {
+/* .tab-btn:hover {
     transition: all 0.2s ease;
     color: var(--main-color);
     background-color: var(--white-color);
     cursor: pointer;
 
+} */
+
+.tab-btn.position-top {
+    position: fixed;
+    top: 0;
+    z-index: 1;
+    box-shadow: 4px 4px 4px var(--main-color);
+}
+
+.tab-btn.position-bottom {
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    box-shadow: 4px -4px 4px var(--main-color);
+}
+
+.new-tab-btn {
+    padding: 8px 28px;
+    border-radius: 12px;
+    cursor: pointer;
+    
+}   
+
+.new-tab-btn:hover {
+    transition: all 0.2s ease;
+    color: var(--main-color);
+    background-color: var(--white-color);
 }
 
 
-.tab-item ~ .tab-btn {
-    margin-left: 4px;
+.add-on {
+    width: 50px;
+    height: 200px;
+    position: fixed;
+    right: -50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    bottom: 0;
+    background-color: var(--main-color);
+    border-radius: 12px 0 0 12px;
+    transition: all 0.2s ease;
 }
 
-.tab-btn ~ .tab-item {
-    margin-right: 4px;
+.add-on i {
+    font-size: 24px;
+    border-radius: 4px;
+    cursor: pointer;
+    padding: 8px;
 }
 
-.tab-btn ~ .tab-btn {
-    margin-left: 4px;
+
+.add-on i:hover {
+    transition: all 0.2s ease;
+    color: var(--main-color);
+    background-color: var(--white-color);
+}
+
+.add-on-btn {
+    padding: 8px 28px;
+    border-radius: 12px;
+    cursor: pointer;
+}
+
+.add-on-btn.active {
+    transition: all 0.2s ease;
+    color: var(--main-color);
+    background-color: var(--white-color);
 }
